# waveaccess-python-assignment

./: .env.example  .env.test  .flake8  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pytest.ini  taskfile.yml
app/: Dockerfile  alembic.ini  pyproject.toml
app/migrations/: env.py
app/migrations/versions/: 00b4dbe412cf_asignee_id_not_nullable.py  1c72565ce4ab_initial_migration.py  296ad53451eb_task_history.py  2987b957cdbf_updated_at_and_create_at_for_users.py  5acacb36ba84_make_task_status_column_required.py  6ec9b464969e_add_blocking_tasks.py  bc41a8448fea_set_up_relationship_for_cascade_delete.py  c9ef0c33ae48_add_task_linked.py
app/src/: main.py
app/src/api/: dependencies.py  mappers.py  task_history.py  task_linked.py  tasks.py  users.py
app/src/core/: constants.py  messages.py  security.py  settings.py
app/src/db/: __init__.py  base.py  db.py  task_blocking.py  task_history.py  task_linked.py  tasks.py  users.py
app/src/models/: pagination.py  response.py  task.py  task_blocking.py  task_history.py  task_linked.py  user.py
app/src/services/: pagination.py  task_blocking.py  task_history.py  task_linked.py  tasks.py  users.py
app/src/utils/: enum_to_dict.py  extract_id_from_model_dump.py
tests/: conftest.py  test_tasks.py  test_users.py
