[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["arkady <atyursrvice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.21"
pydantic = "^2.3.0"
uvicorn = "^0.23.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.28.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.0.3"


[tool.poetry.group.test.dependencies]
httpx = "^0.25.0"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
alembic = "^1.12.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
